src/test/ui/parser/increment-notfixed.stderr
error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:11:6
   |
LL |     i++;
   |      ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = i; i += 1; tmp };
   |     +++++++++++  ~~~~~~~~~~~~~~~
LL |     i += 1;
   |       ~~~~

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:17:12
   |
LL |     while i++ < 5 {
   |     -----  ^^ not a valid postfix operator
   |     |
   |     while parsing the condition of this `while` expression
   |
help: use `+= 1` instead
   |
LL |     while { let tmp = i; i += 1; tmp } < 5 {
   |           +++++++++++  ~~~~~~~~~~~~~~~
LL |     while i += 1 < 5 {
   |             ~~~~

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:25:8
   |
LL |     tmp++;
   |        ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp_ = tmp; tmp += 1; tmp_ };
   |     ++++++++++++    ~~~~~~~~~~~~~~~~~~
LL |     tmp += 1;
   |         ~~~~

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:31:14
   |
LL |     while tmp++ < 5 {
   |     -----    ^^ not a valid postfix operator
   |     |
   |     while parsing the condition of this `while` expression
   |
help: use `+= 1` instead
   |
LL |     while { let tmp_ = tmp; tmp += 1; tmp_ } < 5 {
   |           ++++++++++++    ~~~~~~~~~~~~~~~~~~
LL |     while tmp += 1 < 5 {
   |               ~~~~

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:39:16
   |
LL |     foo.bar.qux++;
   |                ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = foo.bar.qux; foo.bar.qux += 1; tmp };
   |     +++++++++++            ~~~~~~~~~~~~~~~~~~~~~~~~~
LL |     foo.bar.qux += 1;
   |                 ~~~~

error: Rust has no postfix increment operator
  --> $DIR/increment-notfixed.rs:49:10
   |
LL |     s.tmp++;
   |          ^^ not a valid postfix operator
   |
help: use `+= 1` instead
   |
LL |     { let tmp = s.tmp; s.tmp += 1; tmp };
   |     +++++++++++      ~~~~~~~~~~~~~~~~~~~
LL |     s.tmp += 1;
   |           ~~~~

error: Rust has no prefix increment operator
  --> $DIR/increment-notfixed.rs:56:5
   |
LL |     ++foo.bar.qux;
   |     ^^ not a valid prefix operator
   |
help: use `+= 1` instead
   |
LL -     ++foo.bar.qux;
LL +     foo.bar.qux += 1;
   |

error: aborting due to 7 previous errors

